large changes to how db is setup, and some schema changes
