# docs/swagger.yaml
@@ -1,29 +1,12 @@
 basePath: /api/v1
 definitions:
-  model.Patient:
-    properties:
-      date:
-        type: string
-      date_created:
-        type: string
-      id:
-        type: integer
-      name:
-        type: string
-      samples:
-        type: integer
-    type: object
   model.PatientData:
     properties:
       comments:
         items:
           type: string
         type: array
-      date_created:
-        type: string
       date_of_birth:
-        type: string
-      id:
         type: string
       name:
         type: string
@@ -38,15 +21,26 @@ definitions:
     properties:
       patients:
         items:
-          $ref: '#/definitions/model.Patient'
+          $ref: '#/definitions/model.PatientListEntry'
         type: array
+    type: object
+  model.PatientListEntry:
+    properties:
+      date:
+        type: string
+      name:
+        type: string
+      patient_id:
+        type: string
+      ref_id:
+        type: string
+      samples:
+        type: string
     type: object
   model.Sample:
     properties:
       image:
         type: string
-      prediction:
-        type: number
     type: object
   model.Test:
     properties:
@@ -78,11 +72,16 @@ paths:
       description: Checks for a matching id in the databse and returns data for that
         id
       parameters:
+      - description: reference id of the samples
+        in: query
+        name: ref_id
+        required: true
+        type: string
       - description: id of the patient
         in: query
-        name: id
+        name: patient_id
         required: true
-        type: integer
+        type: string
       produces:
       - application/json
       responses:
