# model/api/patientdata/sample.go
@@ -1,6 +1,6 @@
 package model
 
 type Sample struct {
-    Image           string  `json:"image"`
-	ModelPrediction float64 `json:"prediction"`
+	Image string `json:"image"`
+	// ModelPrediction float64 `json:"prediction"`
 }
